@@ -3,6 +3,7 @@ Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 {{$NEXT}}
     * Update Github plugins
     * Remove TestingMania version prerequisite
+    * Remove Repository/Bugtracker (covered by Github::Meta)
 
 0.015     2011-04-02
     * Add support for specifying the changelog filename
